@@ -1,8 +1,8 @@
 \label{ug.sec.varlist}
 The following list shows all the variable names used by GLIMMER. Only variables marked with $^\ast$ are loaded by the input routines.
-\subsection{Glide Variables}
+\section{Glide Variables}
 \input{\dir/glide_varlist.tex}
-\subsection{EIS Variables}
+\section{EIS Variables}
 \input{\dir/eis_varlist.tex}
-\subsection{GLINT Variables}
+\section{GLINT Variables}
 \input{\dir/glint_varlist.tex}
